// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TeamTab component should render correctly 1`] = `
<ScrollView
  contentContainerStyle={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#CCEEEC",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
  style={
    Array [
      Object {
        "backgroundColor": "#EBEDEF",
        "flex": 1,
      },
      Object {
        "width": 320,
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "padding": 8,
      }
    }
  >
    <Icon
      color="#00A499"
      name="ios-person-add"
      size={35}
    />
    <Text
      weight="bold"
    >
      Invite Teammates
    </Text>
    <Text
      family="archer"
      size="larger"
    >
      Stay Connected
    </Text>
    <View
      style={
        Object {
          "borderBottomColor": "#00A499",
          "borderBottomWidth": 1,
          "marginVertical": 8,
          "width": 60,
        }
      }
    />
    <Text
      size="small"
      style={
        Object {
          "paddingHorizontal": 16,
        }
      }
      textAlign="center"
    >
      Keep everyone connected on your project. Collaborate on shopping lists, track orders and share progress photos. Home improvements is hard, we help make it easier! Start building your team today for free.
    </Text>
    <View
      style={
        Object {
          "borderTopColor": "#EBEDEF",
          "borderTopWidth": 1,
          "flexDirection": "row",
          "marginTop": 8,
        }
      }
    >
      <Button
        accessibilityLabel="Invite"
        borders={false}
        color="primary"
        onPress={[Function]}
        style={
          Object {
            "flexGrow": 1,
          }
        }
        trackAction={undefined}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Icon
            color="#FFFFFF"
            name="ios-person-add"
            size={25}
          />
          <Text
            color="white"
            style={
              Object {
                "marginLeft": 8,
              }
            }
          >
            Invite Teammates
          </Text>
        </View>
      </Button>
    </View>
  </View>
</ScrollView>
`;

exports[`TeamTab component should render the invitees block 1`] = `
<ScrollView
  contentContainerStyle={Array []}
  style={
    Array [
      Object {
        "backgroundColor": "#EBEDEF",
        "flex": 1,
      },
      Object {
        "width": 320,
      },
    ]
  }
>
  <View
    style={
      Object {
        "marginTop": 8,
      }
    }
  >
    <TappableListItem
      accessibilityLabel="Invite Teammates tappable"
      analyticsData={
        Object {
          "trackName": undefined,
        }
      }
      onPress={[Function]}
      title={
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Icon
              color="#B1B2B4"
              name="ios-person-add"
              size={25}
            />
            <Text
              color="greyDark"
              style={
                Object {
                  "marginLeft": 8,
                }
              }
            >
              Invite Teammates
            </Text>
          </View>
          <Text
            color="greyDark"
            size="small"
            style={
              Object {
                "marginRight": 8,
              }
            }
          >
            1 Member
          </Text>
        </View>
      }
    />
  </View>
  <View
    style={
      Object {
        "marginTop": 8,
      }
    }
  >
    <ListView
      automaticallyAdjustContentInsets={false}
      dataSource={
        Object {
          "_data": Array [
            Object {
              "email": "test@test.com",
              "isOwner": true,
              "user": Object {
                "avatar": null,
                "firstName": "Test",
                "lastName": "McTesty",
                "name": "Test McTesty",
              },
            },
          ],
          "getRowCount": [Function],
        }
      }
      renderRow={[Function]}
    >
      <TappableListItem
        accessibilityLabel="Teammate tappable"
        analyticsData={
          Object {
            "trackData": Object {
              "status": "Member",
            },
            "trackName": undefined,
          }
        }
        onPress={[Function]}
        title={
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "overflow": "hidden",
                }
              }
            >
              <Avatar
                backgroundColor="#00A499"
                firstName="Test"
                lastName="McTesty"
                size="small"
              />
              <Text
                style={
                  Object {
                    "marginLeft": 8,
                  }
                }
              >
                Test McTesty
              </Text>
            </View>
            <Text
              color="greyDark"
              size="small"
              style={
                Object {
                  "marginRight": 8,
                }
              }
            >
              Project Owner
            </Text>
          </View>
        }
      />
    </ListView>
  </View>
  <View
    style={
      Object {
        "marginTop": 8,
      }
    }
  >
    <ListView
      automaticallyAdjustContentInsets={false}
      dataSource={
        Object {
          "_data": Array [
            Object {
              "email": "test@test.com",
              "status": "PENDING",
              "user": Object {
                "avatar": null,
                "firstName": "Test",
                "lastName": "McTesty",
                "name": "Test McTesty",
              },
            },
          ],
          "getRowCount": [Function],
        }
      }
      renderFooter={[Function]}
      renderHeader={[Function]}
      renderRow={[Function]}
    >
      <TappableListItem
        accessibilityLabel="Teammate tappable"
        analyticsData={
          Object {
            "trackData": Object {
              "status": "Pending",
            },
            "trackName": undefined,
          }
        }
        onPress={[Function]}
        title={
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "overflow": "hidden",
                }
              }
            >
              <Avatar
                backgroundColor="#D0D3D4"
                firstName="Test"
                lastName="McTesty"
                size="small"
              />
              <Text
                style={
                  Object {
                    "marginLeft": 8,
                  }
                }
              >
                Test McTesty
              </Text>
            </View>
            <Text
              capitalize="first"
              color="greyDark"
              fontStyle="italic"
              size="small"
              style={
                Object {
                  "marginRight": 8,
                }
              }
            >
              pending
            </Text>
          </View>
        }
      />
    </ListView>
  </View>
</ScrollView>
`;

exports[`TeamTab function tests should not render the project owner mark 1`] = `undefined`;

exports[`TeamTab function tests should render the pending footer 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#CCEEEC",
      "padding": 16,
    }
  }
>
  <Text
    size="small"
    style={
      Object {
        "paddingBottom": 16,
      }
    }
  >
    They havent accepted your invitation to collaborate, yet. 
    <Text
      size="small"
      weight="bold"
    >
      Re-send invitations
    </Text>
     or copy and share this Project Invitation link to remind them!
  </Text>
  <Button
    accessibilityLabel="Resend Invitations"
    isLoading={undefined}
    onPress={[Function]}
    text="Resend Invitations"
    trackAction={undefined}
  />
</View>
`;

exports[`TeamTab function tests should render the pending header 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#D0D3D4",
      "borderBottomWidth": 1,
      "padding": 16,
    }
  }
>
  <Text
    size="small"
    weight="bold"
  >
    Pending Teammates
  </Text>
</View>
`;

exports[`TeamTab function tests should render the pending teammate with user object 1`] = `
<TappableListItem
  accessibilityLabel="Teammate tappable"
  analyticsData={
    Object {
      "trackData": Object {
        "status": "Pending",
      },
      "trackName": undefined,
    }
  }
  onPress={[Function]}
  title={
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "overflow": "hidden",
          }
        }
      >
        <Avatar
          backgroundColor="#D0D3D4"
          firstName="Test"
          lastName="McTesty"
          size="small"
        />
        <Text
          style={
            Object {
              "marginLeft": 8,
            }
          }
        >
          Test McTesty
        </Text>
      </View>
    </View>
  }
/>
`;

exports[`TeamTab function tests should render the pending teammate without user object 1`] = `
<TappableListItem
  accessibilityLabel="Teammate tappable"
  analyticsData={
    Object {
      "trackData": Object {
        "status": "Pending",
      },
      "trackName": undefined,
    }
  }
  onPress={[Function]}
  title={
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "overflow": "hidden",
          }
        }
      >
        <Avatar
          backgroundColor="#D0D3D4"
          firstName={undefined}
          lastName={undefined}
          size="small"
        />
        <Text
          style={
            Object {
              "marginLeft": 8,
            }
          }
        >
          test@test.com
        </Text>
      </View>
    </View>
  }
/>
`;

exports[`TeamTab function tests should render the project owner mark 1`] = `
<Text
  color="greyDark"
  size="small"
  style={
    Object {
      "marginRight": 8,
    }
  }
>
  Project Owner
</Text>
`;

exports[`TeamTab function tests should render the teammate info 1`] = `
<TappableListItem
  accessibilityLabel="Teammate tappable"
  analyticsData={
    Object {
      "trackData": Object {
        "status": "Member",
      },
      "trackName": undefined,
    }
  }
  onPress={[Function]}
  title={
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "overflow": "hidden",
          }
        }
      >
        <Avatar
          backgroundColor="#00A499"
          firstName="Test"
          lastName="McTesty"
          size="small"
        />
        <Text
          style={
            Object {
              "marginLeft": 8,
            }
          }
        >
          Test McTesty
        </Text>
      </View>
    </View>
  }
/>
`;

exports[`TeamTab function tests should render the teammate status 1`] = `
<Text
  capitalize="first"
  color="greyDark"
  fontStyle="italic"
  size="small"
  style={
    Object {
      "marginRight": 8,
    }
  }
>
  pending
</Text>
`;

exports[`TeamTab function tests should return the screen tracking info 1`] = `
Object {
  "name": "build:app:projects:details:team",
}
`;
